--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "^4.6.0",
     "font-awesome": "^4.7.0",
+    "ngx-bootstrap": "^6.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
