--- a/angular.json
+++ b/angular.json
@@ -21,9 +21,7 @@
                         "aot": true,
                         "assets": [
                             "src/favicon.ico",
-                            "src/assets",
-                            "src/robots.txt",
-                            "src/sitemap.xml"
+                            "src/assets"
                         ],
                         "styles": [
                             "node_modules/bootstrap/dist/css/bootstrap.min.css",
@@ -89,9 +87,7 @@
                         "karmaConfig": "karma.conf.js",
                         "assets": [
                             "src/favicon.ico",
-                            "src/assets",
-                            "src/robots.txt",
-                            "src/sitemap.xml"
+                            "src/assets"
                         ],
                         "styles": [
                             "src/styles.css"
