--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser": "~10.2.0",
     "@angular/platform-browser-dynamic": "~10.2.0",
     "@angular/router": "~10.2.0",
+    "@ckeditor/ckeditor5-angular": "^2.0.1",
+    "@ckeditor/ckeditor5-build-decoupled-document": "^27.1.0",
     "@hardpool/ngx-spinner": "^2.2.1",
     "@ng-bootstrap/ng-bootstrap": "^8.0.4",
     "angular-font-awesome": "^3.1.2",
