--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "^4.6.0",
     "font-awesome": "^4.7.0",
+    "ng-image-slider": "^2.8.0",
     "ng2-file-upload": "^1.4.0",
     "ngx-bootstrap": "^6.2.0",
     "rxjs": "~6.6.0",
