--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "test:watch": "ng test",
         "lint": "ng lint",
         "e2e": "ng e2e",
-        "build:ci": "npm run clean && npm run test && npm run build:prod"
+        "build:ci": "npm run clean && npm run test && npm run build:prod",
+        "prepare": "husky install"
     },
     "private": true,
     "dependencies": {
@@ -45,6 +46,7 @@
         "@types/jasminewd2": "~2.0.3",
         "@types/node": "^12.11.1",
         "codelyzer": "^6.0.0",
+        "husky": "^6.0.0",
         "jasmine-core": "~3.6.0",
         "jasmine-spec-reporter": "~5.0.0",
         "karma": "~5.0.0",
@@ -52,6 +54,7 @@
         "karma-coverage-istanbul-reporter": "~3.0.2",
         "karma-jasmine": "~4.0.0",
         "karma-jasmine-html-reporter": "^1.5.0",
+        "lint-staged": "^11.0.0",
         "prettier": "2.3.0",
         "protractor": "~7.0.0",
         "puppeteer": "^9.1.1",
@@ -59,5 +62,8 @@
         "ts-node": "~8.3.0",
         "tslint": "~6.1.0",
         "typescript": "~4.0.2"
+    },
+    "lint-staged": {
+        "**/*": "prettier --write --ignore-unknown"
     }
 }
