--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "private": true,
     "dependencies": {
         "@angular/animations": "~10.2.0",
+        "@angular/cdk": "^10.2.7",
         "@angular/common": "~10.2.0",
         "@angular/compiler": "~10.2.0",
         "@angular/core": "~10.2.0",
         "@angular/forms": "~10.2.0",
         "@angular/localize": "~10.2.0",
+        "@angular/material": "^10.2.7",
         "@angular/platform-browser": "~10.2.0",
         "@angular/platform-browser-dynamic": "~10.2.0",
         "@angular/router": "~10.2.0",
@@ -30,10 +32,14 @@
         "@hardpool/ngx-spinner": "^2.2.1",
         "@ng-bootstrap/ng-bootstrap": "^8.0.4",
         "angular-font-awesome": "^3.1.2",
+        "angular-responsive-carousel": "^2.0.2",
         "bootstrap": "^4.6.0",
         "font-awesome": "^4.7.0",
+        "ng-image-slider": "^2.8.0",
         "ng2-file-upload": "^1.4.0",
         "ngx-bootstrap": "^6.2.0",
+        "ngx-tweet": "^2.0.3",
+        "ngx-twitter-timeline": "^0.1.5",
         "rxjs": "~6.6.0",
         "tslib": "^2.0.0",
         "zone.js": "~0.10.2"
