--- a/angular.json
+++ b/angular.json
@@ -21,6 +21,7 @@
                         "aot": true,
                         "assets": ["src/favicon.ico", "src/assets"],
                         "styles": [
+                            "src/custom-theme.scss",
                             "node_modules/bootstrap/dist/css/bootstrap.min.css",
                             "node_modules/font-awesome/css/font-awesome.css",
                             "src/styles.css"
