--- a/package.json
+++ b/package.json
@@ -1,76 +1,77 @@
 {
-  "name": "only-weebs",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "clean": "rimraf ./dist",
-    "start": "ng serve",
-    "build": "ng build",
-    "build:prod": "ng build --prod",
-    "test": "ng test --watch=false",
-    "test:watch": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e",
-    "build:ci": "npm run clean && npm run build:prod",
-    "prepare": "husky install"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "~12.0.4",
-    "@angular/cdk": "^12.0.4",
-    "@angular/common": "~12.0.4",
-    "@angular/compiler": "~12.0.4",
-    "@angular/core": "~12.0.4",
-    "@angular/forms": "~12.0.4",
-    "@angular/localize": "~12.0.4",
-    "@angular/material": "^12.0.4",
-    "@angular/platform-browser": "~12.0.4",
-    "@angular/platform-browser-dynamic": "~12.0.4",
-    "@angular/router": "~12.0.4",
-    "@ckeditor/ckeditor5-angular": "^2.0.1",
-    "@ckeditor/ckeditor5-build-decoupled-document": "^27.1.0",
-    "@hardpool/ngx-spinner": "^2.2.1",
-    "@ng-bootstrap/ng-bootstrap": "^8.0.4",
-    "angular-font-awesome": "^3.1.2",
-    "angular-responsive-carousel": "^2.0.2",
-    "bootstrap": "^4.6.0",
-    "font-awesome": "^4.7.0",
-    "ng-image-slider": "^2.8.0",
-    "ng2-file-upload": "^1.4.0",
-    "ngx-bootstrap": "^6.2.0",
-    "ngx-toastr": "^14.0.0",
-    "ngx-tweet": "^2.0.3",
-    "ngx-twitter-timeline": "^0.1.5",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.11.4"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "~12.0.4",
-    "@angular/cli": "~12.0.4",
-    "@angular/compiler-cli": "~12.0.4",
-    "@types/jasmine": "~3.6.0",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.0",
-    "husky": "^6.0.0",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.3.3",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "lint-staged": "^11.0.0",
-    "prettier": "2.3.0",
-    "protractor": "~7.0.0",
-    "puppeteer": "^9.1.1",
-    "rimraf": "^3.0.2",
-    "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~4.2.4"
-  },
-  "lint-staged": {
-    "**/*": "prettier --write --ignore-unknown"
-  }
+    "name": "only-weebs",
+    "version": "0.0.0",
+    "scripts": {
+        "ng": "ng",
+        "clean": "rimraf ./dist",
+        "start": "ng serve",
+        "build": "ng build",
+        "build:prod": "ng build --configuration production",
+        "test": "ng test --watch=false",
+        "test:watch": "ng test",
+        "lint": "ng lint",
+        "e2e": "ng e2e",
+        "build:ci": "npm run clean && npm run build:prod",
+        "prepare": "husky install",
+        "full-clean": "rimraf ./node_modules",
+        "reinstall": "npm run full-clean && npm run clean && npm install",
+        "rebuild": "npm run full-clean && npm install && npm run build"
+    },
+    "private": true,
+    "dependencies": {
+        "@angular/animations": "~12.1.0",
+        "@angular/cdk": "^12.1.0",
+        "@angular/common": "~12.1.0",
+        "@angular/compiler": "~12.1.0",
+        "@angular/core": "~12.1.0",
+        "@angular/forms": "~12.1.0",
+        "@angular/localize": "~12.1.0",
+        "@angular/material": "^12.1.0",
+        "@angular/platform-browser": "~12.1.0",
+        "@angular/platform-browser-dynamic": "~12.1.0",
+        "@angular/router": "~12.1.0",
+        "@ckeditor/ckeditor5-angular": "^2.0.1",
+        "@ckeditor/ckeditor5-build-decoupled-document": "^27.1.0",
+        "@hardpool/ngx-spinner": "^2.2.1",
+        "@ng-bootstrap/ng-bootstrap": "^8.0.4",
+        "angular-responsive-carousel": "^2.0.2",
+        "bootstrap": "^4.6.0",
+        "ng-image-slider": "^2.8.0",
+        "ng2-file-upload": "^1.4.0",
+        "ngx-bootstrap": "^6.2.0",
+        "ngx-toastr": "^14.0.0",
+        "ngx-tweet": "^2.0.3",
+        "ngx-twitter-timeline": "^0.1.5",
+        "rxjs": "~6.6.0",
+        "tslib": "^2.0.0",
+        "zone.js": "~0.11.4"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "~12.1.0",
+        "@angular/cli": "~12.1.0",
+        "@angular/compiler-cli": "~12.1.0",
+        "@types/jasmine": "~3.6.0",
+        "@types/jasminewd2": "~2.0.3",
+        "@types/node": "^12.11.1",
+        "codelyzer": "^6.0.0",
+        "husky": "^6.0.0",
+        "jasmine-core": "~3.6.0",
+        "jasmine-spec-reporter": "~5.0.0",
+        "karma": "~6.3.3",
+        "karma-chrome-launcher": "~3.1.0",
+        "karma-coverage-istanbul-reporter": "~3.0.2",
+        "karma-jasmine": "~4.0.0",
+        "karma-jasmine-html-reporter": "^1.5.0",
+        "lint-staged": "^11.0.0",
+        "prettier": "2.3.0",
+        "protractor": "~7.0.0",
+        "puppeteer": "^9.1.1",
+        "rimraf": "^3.0.2",
+        "ts-node": "~8.3.0",
+        "tslint": "~6.1.0",
+        "typescript": "~4.2.4"
+    },
+    "lint-staged": {
+        "**/*": "prettier --write --ignore-unknown"
+    }
 }
